# TechChallenge

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
src/api/: router.py  server.py
src/data/: processamento_subopt_01.csv  producao.csv
src/models/: enums.py  utils.py
src/usecases/data_commercialization/: __init__.py  dtos.py
src/usecases/data_export/: __init__.py  dtos.py
src/usecases/data_import/: __init__.py  dtos.py
src/usecases/data_processing/: __init__.py  dtos.py
src/usecases/data_production/: __init__.py  dtos.py
