[tool.poetry]
name = "techchalenge1"
version = "0.1.0"
description = "Desafio Dados da Vitivinicultura"
authors = ["adriano warmling"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
requests = "^2.31.0"
pandas = "^2.2.1"
uvicorn = "^0.29.0"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
